[package]
name = "zksync_os_l1_watcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_contract_interface.workspace = true
zksync_os_storage_api.workspace = true
zksync_os_types.workspace = true
zksync_os_batch_types.workspace = true
zksync_os_mempool.workspace = true
zk_os_api.workspace = true
zk_os_basic_system.workspace = true

async-trait.workspace = true
alloy = { workspace = true, default-features = false, features = ["reqwest", "rpc-types", "providers"] }
anyhow.workspace = true
blake2.workspace = true
tokio.workspace = true
tracing.workspace = true
vise.workspace = true
thiserror.workspace = true
futures.workspace = true
backon.workspace = true
rangemap.workspace = true
