[package]
name = "zksync_os_mempool"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_types = { workspace = true, features = ["reth"] }
zksync_os_storage_api.workspace = true
zksync_os_reth_compat.workspace = true
zksync_os_contract_interface.workspace = true
zksync_os_l1_watcher.workspace = true
zksync_os_genesis.workspace = true
zksync_os_provider.workspace = true

zksync_os_interface = { workspace = true }

reth-transaction-pool = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-execution-types = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-chainspec = { workspace = true }
reth-tasks = { workspace = true }

alloy = { workspace = true, default-features = false, features = ["consensus", "sol-types", "eips"] }
async-trait.workspace = true
anyhow.workspace = true
auto_impl.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
vise.workspace = true
metrics.workspace = true
pin-project.workspace = true
