[package]
name = "zksync_os_merkle_tree"
description = "Persistent ZK OS Merkle tree"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_crypto.workspace = true
zksync_os_rocksdb.workspace = true

alloy = { workspace = true, default-features = false }
anyhow.workspace = true
blake2.workspace = true
leb128.workspace = true
once_cell.workspace = true
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true
vise.workspace = true
zk_os_forward_system_0_1_0.workspace = true
zk_ee_0_1_0.workspace = true
zk_os_basic_system_0_1_0.workspace = true
zk_os_forward_system.workspace = true
zk_os_basic_system.workspace = true
zk_ee.workspace = true
tokio.workspace = true

[dev-dependencies]
alloy = { workspace = true, default-features = false, features = ["rand"] }
clap = { workspace = true, features = ["derive"] }
insta = { workspace = true, features = ["yaml"] }
proptest.workspace = true
rand.workspace = true
serde.workspace = true
serde_with = { workspace = true, features = ["hex"] }
tempfile.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
