[package]
name = "zksync_os_merkle_tree_api"
description = "ZK OS Merkle tree API"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_crypto.workspace = true

alloy = { workspace = true, default-features = false }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
alloy = { workspace = true, features = ["rand"] }
assert_matches.workspace = true
insta = { workspace = true, features = ["yaml"] }
rand.workspace = true
