[package]
name = "zksync_os_multivm"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

build = "build.rs"

[dependencies]
zksync_os_interface.workspace = true
zk_os_forward_system.workspace = true
zk_os_forward_system_0_1_0.workspace = true
zk_os_forward_system_0_0_26.workspace = true
anyhow.workspace = true
zksync_os_types.workspace = true
alloy = { workspace = true, default-features = false, features = ["consensus", "eips", "rlp"] }
tracing.workspace = true

[build-dependencies]
anyhow.workspace = true
cargo_metadata = { workspace = true, default-features = false }
reqwest = { workspace = true, features = ["blocking"] }
url.workspace = true
