[package]
name = "zksync_os_observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, default-features = false, features = ["now"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-logfmt = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "json",
    "time",
] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sentry = { workspace = true, features = ["tracing"] }
itertools.workspace = true
url.workspace = true
vise.workspace = true
vise-exporter.workspace = true

opentelemetry-semantic-conventions = { workspace = true, features = [
    "semconv_experimental",
] }
tracing-opentelemetry.workspace = true
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true }
opentelemetry-appender-tracing.workspace = true

reth-tasks.workspace = true
