[package]
name = "zksync_os_operator_signer"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = { workspace = true, default-features = false, features = [
    "signer-local",
    "signer-gcp",
    "k256",
    "network",
    "consensus",
] }
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
anyhow.workspace = true
