[package]
name = "zksync_os_pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
futures.workspace = true
tracing.workspace = true

reth-tasks.workspace = true
