[package]
name = "zksync_os_priority_tree"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_contract_interface.workspace = true
zksync_os_crypto.workspace = true
zksync_os_batch_types.workspace = true
zksync_os_l1_sender.workspace = true
zksync_os_l1_watcher.workspace = true
zksync_os_mini_merkle_tree.workspace = true
zksync_os_storage_api.workspace = true
zksync_os_types.workspace = true
zksync_os_observability.workspace = true
zksync_os_rocksdb.workspace = true
zksync_os_pipeline.workspace = true

anyhow.workspace = true
alloy = { workspace = true, default-features = false }
tokio.workspace = true
tracing.workspace = true
bincode.workspace = true
