[package]
name = "zksync_os_provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = { workspace = true, default-features = false, features = [
    "json-rpc",
    "rpc-types",
    "providers",
    "rpc-client",
    "transports",
] }
async-trait.workspace = true
anyhow.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
vise.workspace = true
