[package]
name = "zksync_os_replay_archive"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_storage.workspace = true
zksync_os_storage_api.workspace = true
zksync_os_interface.workspace = true
zksync_os_l1_sender.workspace = true
zksync_os_pipeline.workspace = true
zksync_os_observability.workspace = true

age.workspace = true
alloy = { workspace = true, default-features = false }
anyhow.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-runtime.workspace = true
aws-sdk-s3.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
futures.workspace = true
reth-tasks.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
tokio-stream.workspace = true
tracing.workspace = true
vise.workspace = true

[dev-dependencies]
tempfile.workspace = true
