[package]
name = "zksync_os_reth_compat"
description = "ZKsync OS compatibility layer with Reth"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_storage_api.workspace = true

zk_os_api.workspace = true

reth-chainspec = { workspace = true }
reth-db-models = { workspace = true }
reth-primitives = { workspace = true }
reth-storage-api = { workspace = true }
reth-trie-common = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-revm = { workspace = true }

alloy = { workspace = true, default-features = false, features = ["genesis"] }
